--- a/index.html
+++ b/index.html
@@ -1,57 +1,82 @@
 <!DOCTYPE html>
 <html lang="id">
 <head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<meta charset="UTF-8" />
+<meta name="viewport" content="width=device-width, initial-scale=1.0"/>
 <title>Wedding Invitation</title>
 
-<link href="https://fonts.googleapis.com/css2?family=Playfair+Display&family=Poppins&display=swap" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@500&family=Poppins:wght@300&display=swap" rel="stylesheet">
 
 <style>
 body {
   margin: 0;
   font-family: 'Poppins', sans-serif;
+  background: #fff9f5;
+  color: #4a4a4a;
   text-align: center;
-  background: #fffaf6;
-  color: #333;
 }
+
 .hero {
   height: 100vh;
-  background: url('https://images.unsplash.com/photo-1520854221256-17451cc331bf') center/cover;
+  background: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)),
+  url('https://images.unsplash.com/photo-1523430410476-0185cb1f6ff8') center/cover;
   display: flex;
   justify-content: center;
   align-items: center;
   flex-direction: column;
   color: white;
 }
+
 .hero h1 {
   font-family: 'Playfair Display', serif;
-  font-size: 40px;
+  font-size: 42px;
+  letter-spacing: 2px;
 }
+
 .btn {
-  padding: 12px 25px;
-  background: #c9a227;
+  margin-top: 20px;
+  padding: 12px 28px;
+  background: #d4af37;
   color: white;
   border-radius: 30px;
   text-decoration: none;
-  margin-top: 20px;
 }
+
 section {
-  padding: 60px 20px;
+  padding: 70px 20px;
 }
-.countdown {
-  font-size: 24px;
-  margin-top: 20px;
+
+h2 {
+  font-family: 'Playfair Display', serif;
+  font-size: 28px;
+  margin-bottom: 10px;
 }
+
+.flower-divider {
+  width: 120px;
+  margin: 15px auto;
+}
+
+.card {
+  background: white;
+  max-width: 500px;
+  margin: auto;
+  padding: 30px;
+  border-radius: 15px;
+  box-shadow: 0 8px 20px rgba(0,0,0,0.08);
+}
+
 .gallery img {
   width: 90%;
-  max-width: 300px;
+  max-width: 280px;
   margin: 10px;
-  border-radius: 10px;
+  border-radius: 12px;
 }
+
 footer {
-  padding: 30px;
-  background: #eee;
+  padding: 40px;
+  background: #f1e8e4;
+  font-size: 14px;
 }
 </style>
 </head>
@@ -60,17 +85,22 @@ footer {
 
 <div class="hero">
   <h1>Dita & Partner</h1>
-  <p>We Are Getting Married</p>
+  <p>Are Getting Married</p>
   <a href="#detail" class="btn">Open Invitation</a>
 </div>
 
 <section id="detail">
+  <img class="flower-divider" src="https://cdn-icons-png.flaticon.com/512/2921/2921822.png">
   <h2>Save The Date</h2>
-  <p>Saturday, 20 December 2026</p>
-  <div class="countdown" id="countdown"></div>
+  <div class="card">
+    <p><strong>Saturday, 20 December 2026</strong></p>
+    <p>Akad: 09.00 WIB</p>
+    <p>Resepsi: 11.00 WIB</p>
+  </div>
 </section>
 
 <section>
+  <img class="flower-divider" src="https://cdn-icons-png.flaticon.com/512/2921/2921822.png">
   <h2>Our Moments</h2>
   <div class="gallery">
     <img src="https://images.unsplash.com/photo-1519741497674-611481863552">
@@ -79,35 +109,17 @@ footer {
 </section>
 
 <section>
+  <img class="flower-divider" src="https://cdn-icons-png.flaticon.com/512/2921/2921822.png">
   <h2>Venue</h2>
-  <p>Grand Ballroom Hotel Bahagia</p>
-  <p>Jakarta, Indonesia</p>
+  <div class="card">
+    <p><strong>Grand Ballroom Hotel Bahagia</strong></p>
+    <p>Jakarta, Indonesia</p>
+  </div>
 </section>
 
 <footer>
-  Thank you for being part of our special day 💖
+  With love, Dita & Partner 💖
 </footer>
-
-<audio autoplay loop>
-  <source src="music.mp3" type="audio/mpeg">
-</audio>
-
-<script>
-const countDate = new Date("Dec 20, 2026 09:00:00").getTime();
-const x = setInterval(function() {
-  const now = new Date().getTime();
-  const distance = countDate - now;
-
-  const days = Math.floor(distance / (1000 * 60 * 60 * 24));
-  const hours = Math.floor((distance % (1000 * 60 * 60 * 24)) / (1000 * 60 * 60));
-  const minutes = Math.floor((distance % (1000 * 60 * 60)) / (1000 * 60));
-  const seconds = Math.floor((distance % (1000 * 60)) / 1000);
-
-  document.getElementById("countdown").innerHTML =
-  days + "d " + hours + "h " + minutes + "m " + seconds + "s ";
-
-}, 1000);
-</script>
 
 </body>
 </html>
