--- a/index.html
+++ b/index.html
@@ -14,8 +14,10 @@ body {
   background: #fff9f5;
   color: #4a4a4a;
   text-align: center;
+  overflow-x: hidden;
 }
 
+/* HERO */
 .hero {
   height: 100vh;
   background: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)),
@@ -26,11 +28,15 @@ body {
   flex-direction: column;
   color: white;
 }
-
 .hero h1 {
   font-family: 'Playfair Display', serif;
   font-size: 42px;
   letter-spacing: 2px;
+  animation: fade 2s ease-in-out;
+}
+@keyframes fade {
+  from {opacity: 0; transform: translateY(20px);}
+  to {opacity: 1; transform: translateY(0);}
 }
 
 .btn {
@@ -49,12 +55,6 @@ section {
 h2 {
   font-family: 'Playfair Display', serif;
   font-size: 28px;
-  margin-bottom: 10px;
-}
-
-.flower-divider {
-  width: 120px;
-  margin: 15px auto;
 }
 
 .card {
@@ -78,6 +78,25 @@ footer {
   background: #f1e8e4;
   font-size: 14px;
 }
+
+/* 🌸 PETAL ANIMATION */
+.petal {
+  position: fixed;
+  top: -10px;
+  width: 15px;
+  height: 15px;
+  background: radial-gradient(circle, #ffd1dc, #ffb6c1);
+  border-radius: 50%;
+  opacity: 0.8;
+  pointer-events: none;
+  animation: fall linear infinite;
+}
+
+@keyframes fall {
+  to {
+    transform: translateY(100vh) rotate(360deg);
+  }
+}
 </style>
 </head>
 
@@ -90,7 +109,6 @@ footer {
 </div>
 
 <section id="detail">
-  <img class="flower-divider" src="https://cdn-icons-png.flaticon.com/512/2921/2921822.png">
   <h2>Save The Date</h2>
   <div class="card">
     <p><strong>Saturday, 20 December 2026</strong></p>
@@ -100,7 +118,6 @@ footer {
 </section>
 
 <section>
-  <img class="flower-divider" src="https://cdn-icons-png.flaticon.com/512/2921/2921822.png">
   <h2>Our Moments</h2>
   <div class="gallery">
     <img src="https://images.unsplash.com/photo-1519741497674-611481863552">
@@ -109,7 +126,6 @@ footer {
 </section>
 
 <section>
-  <img class="flower-divider" src="https://cdn-icons-png.flaticon.com/512/2921/2921822.png">
   <h2>Venue</h2>
   <div class="card">
     <p><strong>Grand Ballroom Hotel Bahagia</strong></p>
@@ -120,6 +136,18 @@ footer {
 <footer>
   With love, Dita & Partner 💖
 </footer>
+
+<script>
+function createPetal() {
+  const petal = document.createElement("div");
+  petal.classList.add("petal");
+  petal.style.left = Math.random() * window.innerWidth + "px";
+  petal.style.animationDuration = (4 + Math.random() * 4) + "s";
+  document.body.appendChild(petal);
+  setTimeout(() => petal.remove(), 8000);
+}
+setInterval(createPetal, 400);
+</script>
 
 </body>
 </html>
