--- a/index.html
+++ b/index.html
@@ -128,13 +128,13 @@ footer {
 <section>
   <h2>Venue</h2>
   <div class="card">
-    <p><strong>Grand Ballroom Hotel Bahagia</strong></p>
+    <p><strong>Grand Ballroom Antasari Place</strong></p>
     <p>Jakarta, Indonesia</p>
   </div>
 </section>
 
 <footer>
-  With love, Dita & Partner 💖
+  With love, Dita & Resha 💖
 </footer>
 
 <script>
@@ -151,3 +151,4 @@ setInterval(createPetal, 400);
 
 </body>
 </html>
+
