--- a/index.html
+++ b/index.html
@@ -3,152 +3,121 @@
 <head>
 <meta charset="UTF-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-<title>Wedding Invitation</title>
+<title>Luna & Maxime Wedding</title>
 
-<link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@500&family=Poppins:wght@300&display=swap" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@500&family=Poppins:wght@300;400&display=swap" rel="stylesheet">
 
 <style>
-body {
-  margin: 0;
-  font-family: 'Poppins', sans-serif;
-  background: #fff9f5;
-  color: #4a4a4a;
-  text-align: center;
-  overflow-x: hidden;
-}
+body{margin:0;font-family:'Poppins',sans-serif;background:#f4f2ee;overflow-x:hidden}
 
-/* HERO */
-.hero {
-  height: 100vh;
-  background: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)),
-  url('https://images.unsplash.com/photo-1523430410476-0185cb1f6ff8') center/cover;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  flex-direction: column;
-  color: white;
-}
-.hero h1 {
-  font-family: 'Playfair Display', serif;
-  font-size: 42px;
-  letter-spacing: 2px;
-  animation: fade 2s ease-in-out;
-}
-@keyframes fade {
-  from {opacity: 0; transform: translateY(20px);}
-  to {opacity: 1; transform: translateY(0);}
-}
+/* COVER */
+#cover{position:fixed;inset:0;background:url('https://images.unsplash.com/photo-1500530855697-b586d89ba3ee') center/cover;display:flex;justify-content:center;align-items:center;z-index:999;transition:1.2s}
+#cover.hide{opacity:0;pointer-events:none}
+.cover-box{text-align:center;background:rgba(255,255,255,0.8);padding:30px;border-radius:20px}
+.cover-box h1{font-family:'Playfair Display',serif;margin:0}
+.btn{margin-top:15px;padding:12px 28px;border-radius:30px;background:#555;color:white;border:none;cursor:pointer}
 
-.btn {
-  margin-top: 20px;
-  padding: 12px 28px;
-  background: #d4af37;
-  color: white;
-  border-radius: 30px;
-  text-decoration: none;
-}
+/* SCENE */
+.scene{height:100vh;position:relative;overflow:hidden;background:linear-gradient(#dfe6e3,#f7f6f3)}
+.waterfall{position:absolute;bottom:0;width:100%;height:60%;background:url('https://i.gifer.com/7efs.gif') center/cover;opacity:.5}
+.frame{position:absolute;top:50%;left:50%;transform:translate(-50%,-50%) scale(.8);text-align:center;opacity:0;transition:1s}
+.frame.show{transform:translate(-50%,-50%) scale(1);opacity:1}
+.frame h2{font-family:'Playfair Display',serif;font-size:40px}
 
-section {
-  padding: 70px 20px;
-}
+/* SCROLL */
+.section{padding:100px 20px;text-align:center;opacity:0;transform:translateY(60px);transition:.9s}
+.section.show{opacity:1;transform:none}
+.section h3{font-family:'Playfair Display',serif}
 
-h2 {
-  font-family: 'Playfair Display', serif;
-  font-size: 28px;
-}
+/* GALLERY */
+.gallery{display:grid;grid-template-columns:repeat(2,1fr);gap:15px}
+.gallery img{width:100%;border-radius:20px}
 
-.card {
-  background: white;
-  max-width: 500px;
-  margin: auto;
-  padding: 30px;
-  border-radius: 15px;
-  box-shadow: 0 8px 20px rgba(0,0,0,0.08);
-}
+/* MODAL */
+.modal{position:fixed;inset:0;background:rgba(0,0,0,.6);display:none;justify-content:center;align-items:center}
+.modal-box{background:white;padding:30px;border-radius:20px;width:80%;max-width:400px}
 
-.gallery img {
-  width: 90%;
-  max-width: 280px;
-  margin: 10px;
-  border-radius: 12px;
-}
-
-footer {
-  padding: 40px;
-  background: #f1e8e4;
-  font-size: 14px;
-}
-
-/* 🌸 PETAL ANIMATION */
-.petal {
-  position: fixed;
-  top: -10px;
-  width: 15px;
-  height: 15px;
-  background: radial-gradient(circle, #ffd1dc, #ffb6c1);
-  border-radius: 50%;
-  opacity: 0.8;
-  pointer-events: none;
-  animation: fall linear infinite;
-}
-
-@keyframes fall {
-  to {
-    transform: translateY(100vh) rotate(360deg);
-  }
-}
+/* MUSIC BTN */
+#musicBtn{position:fixed;bottom:20px;right:20px;z-index:1000;border:none;background:#444;color:white;padding:12px;border-radius:50%;font-size:18px;cursor:pointer}
 </style>
 </head>
 
 <body>
 
-<div class="hero">
-  <h1>Dita & Partner</h1>
-  <p>Are Getting Married</p>
-  <a href="#detail" class="btn">Open Invitation</a>
+<audio id="bg-music" loop>
+  <source src="music.mp3" type="audio/mpeg">
+</audio>
+
+<button id="musicBtn" onclick="toggleMusic()">🔊</button>
+
+<!-- COVER -->
+<div id="cover">
+  <div class="cover-box">
+    <h1>Luna & Maxime</h1>
+    <p>Dear, Nama Tamu</p>
+    <button class="btn" onclick="openInvite()">Buka Undangan</button>
+  </div>
 </div>
 
-<section id="detail">
-  <h2>Save The Date</h2>
-  <div class="card">
-    <p><strong>Saturday, 20 December 2026</strong></p>
-    <p>Akad: 09.00 WIB</p>
-    <p>Resepsi: 11.00 WIB</p>
+<!-- SCENE -->
+<div class="scene">
+  <div class="waterfall"></div>
+  <div class="frame" id="nameFrame">
+    <h2>The Wedding Of</h2>
+    <h2>Luna & Maxime</h2>
+    <p>30 . 03 . 2025</p>
   </div>
-</section>
+</div>
 
-<section>
-  <h2>Our Moments</h2>
+<!-- PROFILE -->
+<div class="section">
+  <h3>Bride & Groom</h3>
+  <p>Maha suci Allah yang telah menciptakan makhluk-Nya berpasang-pasangan...</p>
+</div>
+
+<!-- EVENT -->
+<div class="section">
+  <h3>Akad Nikah</h3>
+  <p>Minggu, 30 Maret 2025</p>
+  <p>Pukul 09.00 WIB</p>
+</div>
+
+<!-- GALLERY -->
+<div class="section">
+  <h3>Galeri Foto</h3>
   <div class="gallery">
-    <img src="https://images.unsplash.com/photo-1519741497674-611481863552">
-    <img src="https://images.unsplash.com/photo-1504198458649-3128b932f49e">
+    <img src="https://images.unsplash.com/photo-1529626455594-4ff0802cfb7e">
+    <img src="https://images.unsplash.com/photo-1500534314209-a25ddb2bd429">
   </div>
-</section>
+</div>
 
-<section>
-  <h2>Venue</h2>
-  <div class="card">
-    <p><strong>Grand Ballroom Antasari Place</strong></p>
-    <p>Jakarta, Indonesia</p>
+<!-- GIFT -->
+<div class="section">
+  <h3>Wedding Gift</h3>
+  <button class="btn" onclick="showGift()">Klik Disini</button>
+</div>
+
+<div class="modal" id="giftModal">
+  <div class="modal-box">
+    <h4>Transfer ke:</h4>
+    <p>BCA - 12345678 a.n Luna</p>
+    <button class="btn" onclick="closeGift()">Tutup</button>
   </div>
-</section>
-
-<footer>
-  With love, Dita & Resha 💖
-</footer>
+</div>
 
 <script>
-function createPetal() {
-  const petal = document.createElement("div");
-  petal.classList.add("petal");
-  petal.style.left = Math.random() * window.innerWidth + "px";
-  petal.style.animationDuration = (4 + Math.random() * 4) + "s";
-  document.body.appendChild(petal);
-  setTimeout(() => petal.remove(), 8000);
+const music=document.getElementById("bg-music");
+const btn=document.getElementById("musicBtn");
+
+function openInvite(){
+  document.getElementById('cover').classList.add('hide');
+  music.play();
+  setTimeout(()=>document.getElementById('nameFrame').classList.add('show'),800);
 }
-setInterval(createPetal, 400);
-</script>
 
-</body>
-</html>
+function toggleMusic(){
+  if(music.paused){music.play();btn.innerHTML="🔊";}
+  else{music.pause();btn.innerHTML="🔇";}
+}
 
+const sections=do
